--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,12 @@
+0.1.2  (2017-03-27)
+
+	* Add displaying color legends
+
+0.1.1  (2017-03-10)
+
+	* Change directory configuration
+	* Update dependencies
+
 0.1.0  (2017-01-28)
 
 	* Add PNG image output
