--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+0.2.0  (2017-04-17)
+
+	* Modify displaying circles and labels
+	* Improve handling of configuration
+	* Update color scheme of heatmap
+
 0.1.4  (2017-03-30)
 
 	* Fix SVG/PNG image output
